--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <div class="header">
-        <span class="name">Choi Euno</span>
+        <span class="name">Euno</span>
         <img src=cat.JPG class="profile"></img>
         <div class="link">
-            <span>Insta</span>
+            <span><a>Insta</a></span>
             <span><a href="https://eunocode.tistory.com">Blog</a></span>
             <span><a href="https://github.com/EunoChoi">Git</a></span>
         </div>
@@ -57,19 +57,38 @@
         </div>
         <div>
             <span class=" title" id="goal">Goal</span>
+            <div><img style="width:100%" src='frontend.webp' /></div>
             <div><span>Frontend Developer</span></div>
             <div><span>Full Stack Developer</span></div>
         </div>
         <div>
             <span class="title" id="skill">Skill</span>
-            <div><span>HTML / CSS</span></div>
-            <div><span>JavaScript</span></div>
-            <div><span>ReactJs</span></div>
-            <div><span>NextJs</span></div>
-            <div><span>Python</span></div>
+            <div>
+                <span>HTML / CSS</span>
+                <img class="skillImg" src='htmlcss.png' />
+            </div>
+            <div>
+                <span>JavaScript</span>
+                <img class="skillImg" src='js.png' />
+            </div>
+            <div>
+                <span>ReactJs</span>
+                <img class="skillImg" src='react.png' />
+            </div>
+            <div>
+                <span>NextJs</span>
+                <img class="skillImg" src='next.png' />
+            </div>
+            <div>
+                <span>Python</span>
+                <img class="skillImg" src='python.png' />
+            </div>
         </div>
         <div>
             <span class="title" id="ai">AI Track</span>
+            <div>
+                <img style="width: 100%;" src="elice.png" alt="elice">
+            </div>
             <div>
                 <span>Expectation</span>
                 <span>Team Project</span>
@@ -82,9 +101,7 @@
             </div>
         </div>
     </div>
-    <div id="darkModeButton" onclick="darkmode()">🌙
-        <!--  🌤 -->
-    </div>
+    <div id="darkModeButton" onclick="darkmode()">🌙</div>
 </body>
 
 </html>
