fix css and html

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                 <span>Team Project</span>
             </div>
             <div>
-                <span>Want to say</span>
+                <span>Say to Racers</span>
             </div>
             <div>
-                <span style="font-size: 20px;">- 6개월동안 힘내서 함께해요!!</span>
+                <span style="font-size: 20px;">- 기초 공부부터 탄탄히 6개월동안 힘내서 함께해요!!</span>
             </div>
         </div>
     </div>
