--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span><a href="#about">About</a></span>
             <span><a href="#goal">Goal</a></span>
             <span><a href="#skill">Skill</a></span>
-            <span><a href="#ai">AI Track</a></span>
+            <span><a href="#ai">Elice</a></span>
         </nav>
         <div>
             <span class="title" id="about">About Me</span>
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div>
-            <span class="title" id="ai">AI Track</span>
+            <span class="title" id="ai">Elice AI Track</span>
             <div>
                 <img style="width: 100%;" src="elice.png" alt="elice">
             </div>
